# caveRag

./: .env  data.docx  main.py  pyproject.toml  requirements.txt
router/: cht.py
